# duck-lakehouse

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
aws/: AWS_EXPANSION.md
dashboard/: README.md  app.py  requirements.txt
dashboard/static/: app.js  index.html  styles.css
dbt/dbt_ducklake/: profiles.yml
design/: design.md
docker/: Dockerfile.dbt  Dockerfile.duckdb  Dockerfile.ducklake  Dockerfile.mesh
docker/scripts/: run_all.sh
duck_lakehouse/: __init__.py
duck_lakehouse/data_generator/: __init__.py  __main__.py  generate_v5_data.py  v5_fields.py
duck_lakehouse/ducklake/: __init__.py  __main__.py  ingest.py  init_ducklake.py
duck_lakehouse/mesh_simulator/: __init__.py  __main__.py  mesh_simulator.py
scripts/: start_local.sh
terraform/: README.md  create_catalog.sql  ecs.tf  main.tf  outputs.tf  rds.tf  s3.tf  variables.tf
tests/: conftest.py  test_api.py  test_data_generator.py  test_ingest.py  test_init_ducklake.py  test_mesh_simulator.py  test_pipeline.py
